--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background: linear-gradient(45deg, #ff9a9e, #fad0c4, #fad0c4, #ff9a9e);
     background-size: 400% 400%;
     animation: gradientBG 15s ease infinite;
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: 'Poopins', cursive, sans-serif;
     overflow: hidden;
 }
 
